@@ -1,3 +1,7 @@
+1982.	[bug]		DNSKEY was being accepted on the parent side of
+			a delegation.  KEY is still accepted there for
+			RFC 3007 validated updates. [RT #15620]
+
 1981.	[bug]		win32: condition.c:wait() could fail to reattain
 			the mutex lock.
 
